--- a/css/style.css
+++ b/css/style.css
@@ -111,15 +111,14 @@ body {
 	transition: all 0.2s;
 	position: relative;
 }
-/* .btn:active {
-	transform: translateY(0px);
-	box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
-	background-color: rebeccapurple;
-} */
 .btn:hover {
 	transform: translateY(-3px);
 	box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
 	transition: all 0.4s;
+}
+.btn:active {
+	transform: translateY(0px);
+	box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
 }
 .btn::after {
 	content: '';
@@ -139,4 +138,18 @@ body {
 .btn:hover::after {
 	transform: scaleX(1.3) scaleY(1.5);
 	opacity: 0;
+}
+.btn-animate {
+	animation: btnMoveFromBottom 0.5s ease-out 0.8s;
+	animation-fill-mode: backwards;
+}
+@keyframes btnMoveFromBottom {
+	0% {
+		opacity: 0;
+		transform: translateY(60px);
+	}
+	100% {
+		opacity: 1;
+		transform: translateX(0px);
+	}
 }
