--- a/css/style.css
+++ b/css/style.css
@@ -6,150 +6,169 @@ Medium green: #55c57a
 Dark green: #28b485
 
 */
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
 }
+
+html {
+  font-size: 62.5%;
+}
+
 body {
-	padding: 32px;
-	font-family: 'Lato', sans-serif;
-	font-size: 16px;
-	color: #777;
-	font-weight: 400;
-	line-height: 1.7;
+  padding: 3rem;
+  font-family: "Lato", sans-serif;
+  font-size: 1.6rem;
+  color: #777;
+  font-weight: 400;
+  line-height: 1.7;
+  box-sizing: border-box;
 }
+
 .header {
-	height: 95vh;
-	background-image: linear-gradient(
-			to right bottom,
-			rgba(126, 213, 111, 0.801),
-			rgba(40, 180, 133, 0.801)
-		),
-		url('../img/hero.jpg');
-	background-position: top;
-	background-size: cover;
-	clip-path: polygon(0 1%, 100% 0, 100% 75vh, 0% 100%);
-	position: relative;
+  height: 95vh;
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.801), rgba(40, 180, 133, 0.801)), url("../img/hero.jpg");
+  background-position: top;
+  background-size: cover;
+  clip-path: polygon(0 1%, 100% 0, 100% 75vh, 0% 100%);
+  position: relative;
 }
-.logo-box {
-	position: absolute;
-	top: 40px;
-	left: 40px;
-	font-weight: 400;
+
+.header_logo-box {
+  position: absolute;
+  top: 4rem;
+  left: 4rem;
+  font-weight: 400;
 }
-.logo {
-	height: 35px;
+
+.header_logo {
+  height: 3.5rem;
 }
-.text-box {
-	position: absolute;
-	top: 40%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	color: #fff;
-	text-align: center;
+
+.header_text-box {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  text-align: center;
 }
-.heading-primary {
-	margin-bottom: 60px;
+
+.heading_primary {
+  margin-bottom: 6rem;
 }
-.heading-primary-main {
-	display: block;
-	text-transform: uppercase;
-	font-weight: 400;
-	font-size: 60px;
-	letter-spacing: 35px;
-	animation: textMoveFromLeft 1s ease-out;
+
+.heading_primary-main {
+  display: block;
+  text-transform: uppercase;
+  font-weight: 400;
+  font-size: 6rem;
+  letter-spacing: 3.5rem;
+  animation: textMoveFromLeft 1s ease-out;
 }
-.heading-primary-sub {
-	display: block;
-	text-transform: uppercase;
-	font-size: 22px;
-	font-weight: 700;
-	letter-spacing: 17.4px;
-	animation: textMoveFromRight 1s ease-out;
+
+.heading_primary-sub {
+  display: block;
+  text-transform: uppercase;
+  font-size: 2.2rem;
+  font-weight: 700;
+  letter-spacing: 1.74rem;
+  animation: textMoveFromRight 1s ease-out;
 }
 
 @keyframes textMoveFromLeft {
-	0% {
-		opacity: 0;
-		transform: translateX(-120px);
-	}
-	80% {
-		transform: translateX(20px);
-	}
-	100% {
-		opacity: 1;
-		transform: translateX(0px);
-	}
+  0% {
+    opacity: 0;
+    transform: translateX(-12rem);
+  }
+  80% {
+    transform: translateX(2rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0rem);
+  }
 }
 @keyframes textMoveFromRight {
-	0% {
-		opacity: 0;
-		transform: translateX(120px);
-	}
-	80% {
-		transform: translateX(-20px);
-	}
-	100% {
-		opacity: 1;
-		transform: translateX(0px);
-	}
+  0% {
+    opacity: 0;
+    transform: translateX(12rem);
+  }
+  80% {
+    transform: translateX(-2rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0rem);
+  }
+}
+.btn-white {
+  color: #777;
+  background-color: #fff;
 }
 
-.btn-white {
-	color: #777;
-	background-color: #fff;
-}
 .btn:link,
 .btn:visited {
-	text-decoration: none;
-	font-size: 18px;
-	text-transform: uppercase;
-	padding: 15px 40px;
-	display: inline-block;
-	border-radius: 100px;
-	transition: all 0.2s;
-	position: relative;
+  text-decoration: none;
+  font-size: 1.8rem;
+  text-transform: uppercase;
+  padding: 1.5rem 4rem;
+  display: inline-block;
+  border-radius: 10rem;
+  transition: all 0.2s;
+  position: relative;
 }
+
 .btn:hover {
-	transform: translateY(-3px);
-	box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
-	transition: all 0.4s;
+  transform: translateY(-0.3rem);
+  box-shadow: 0rem 1rem 2rem rgba(0, 0, 0, 0.2);
+  transition: all 0.4s;
 }
+
 .btn:active {
-	transform: translateY(0px);
-	box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
+  transform: translateY(0px);
+  box-shadow: 0rem 0.3rem 1rem rgba(0, 0, 0, 0.2);
 }
+
 .btn::after {
-	content: '';
-	display: inline-block;
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	border-radius: 100px;
-	z-index: -1;
-	transition: all 0.4s;
+  content: "";
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 10rem;
+  z-index: -1;
+  transition: all 0.4s;
 }
+
 .btn-white::after {
-	background-color: #fff;
+  background-color: #fff;
 }
+
 .btn:hover::after {
-	transform: scaleX(1.3) scaleY(1.5);
-	opacity: 0;
+  transform: scaleX(1.3) scaleY(1.5);
+  opacity: 0;
 }
+
 .btn-animate {
-	animation: btnMoveFromBottom 0.5s ease-out 0.8s;
-	animation-fill-mode: backwards;
+  animation: btnMoveFromBottom 0.5s ease-out 0.8s;
+  animation-fill-mode: backwards;
 }
+
 @keyframes btnMoveFromBottom {
-	0% {
-		opacity: 0;
-		transform: translateY(60px);
-	}
-	100% {
-		opacity: 1;
-		transform: translateX(0px);
-	}
+  0% {
+    opacity: 0;
+    transform: translateY(6rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0rem);
+  }
 }
+
+/*# sourceMappingURL=style.css.map */
