--- a/css/style.css
+++ b/css/style.css
@@ -6,79 +6,6 @@ Medium green: #55c57a
 Dark green: #28b485
 
 */
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
-}
-
-html {
-  font-size: 62.5%;
-}
-
-body {
-  padding: 3rem;
-  font-family: "Lato", sans-serif;
-  font-size: 1.6rem;
-  color: #777;
-  font-weight: 400;
-  line-height: 1.7;
-  box-sizing: border-box;
-}
-
-.header {
-  height: 95vh;
-  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.801), rgba(40, 180, 133, 0.801)), url("../img/hero.jpg");
-  background-position: top;
-  background-size: cover;
-  clip-path: polygon(0 1%, 100% 0, 100% 75vh, 0% 100%);
-  position: relative;
-}
-
-.header_logo-box {
-  position: absolute;
-  top: 4rem;
-  left: 4rem;
-  font-weight: 400;
-}
-
-.header_logo {
-  height: 3.5rem;
-}
-
-.header_text-box {
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: #fff;
-  text-align: center;
-}
-
-.heading_primary {
-  margin-bottom: 6rem;
-}
-
-.heading_primary-main {
-  display: block;
-  text-transform: uppercase;
-  font-weight: 400;
-  font-size: 6rem;
-  letter-spacing: 3.5rem;
-  animation: textMoveFromLeft 1s ease-out;
-}
-
-.heading_primary-sub {
-  display: block;
-  text-transform: uppercase;
-  font-size: 2.2rem;
-  font-weight: 700;
-  letter-spacing: 1.74rem;
-  animation: textMoveFromRight 1s ease-out;
-}
-
 @keyframes textMoveFromLeft {
   0% {
     opacity: 0;
@@ -105,13 +32,194 @@ body {
     transform: translateX(0rem);
   }
 }
-.btn-white {
-  color: #777;
-  background-color: #fff;
+@keyframes btnMoveFromBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(6rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0rem);
+  }
+}
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
 }
 
-.btn:link,
-.btn:visited {
+html {
+  font-size: 62.5%;
+}
+
+body {
+  padding: 3rem;
+  font-family: "Lato", sans-serif;
+  font-size: 1.6rem;
+  color: #777;
+  font-weight: 400;
+  line-height: 1.7;
+  box-sizing: border-box;
+}
+
+.heading_primary {
+  margin-bottom: 6rem;
+}
+.heading_primary-main {
+  display: block;
+  text-transform: uppercase;
+  font-weight: 400;
+  font-size: 6rem;
+  letter-spacing: 3.5rem;
+  animation: textMoveFromLeft 1s ease-out;
+}
+.heading_primary-sub {
+  display: block;
+  text-transform: uppercase;
+  font-size: 2.2rem;
+  font-weight: 700;
+  letter-spacing: 1.74rem;
+  animation: textMoveFromRight 1s ease-out;
+}
+
+.heading_secondary {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  background: linear-gradient(to right, #7ed56f, #28b485);
+  display: inline-block;
+  letter-spacing: 0.2rem;
+  -webkit-background-clip: text;
+  color: transparent;
+  transition: all 0.2s;
+}
+.heading_secondary:hover {
+  transform: skewY(3.5deg) skewX(20deg);
+  text-shadow: 0.2rem 0.8rem 1rem rgba(119, 119, 119, 0.5);
+}
+
+.heading-tertiary {
+  font-size: 1.6rem;
+  letter-spacing: 0.1rem;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.u-text-center {
+  text-align: center;
+}
+
+.u-margin-8 {
+  margin-bottom: 8rem;
+}
+
+.u-margin-bottom-2 {
+  margin-bottom: 1.5rem;
+}
+
+.header {
+  height: 95vh;
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.801), rgba(40, 180, 133, 0.801)), url("../img/hero.jpg");
+  background-position: top;
+  background-size: cover;
+  clip-path: polygon(0 1%, 100% 0, 100% 75vh, 0% 100%);
+  position: relative;
+}
+.header_logo-box {
+  position: absolute;
+  top: 4rem;
+  left: 4rem;
+  font-weight: 400;
+}
+.header_logo {
+  height: 3.5rem;
+}
+.header_text-box {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  text-align: center;
+}
+
+.row {
+  max-width: 114rem;
+  margin: 0 auto;
+}
+.row:not(:last-child) {
+  margin-bottom: 8rem;
+}
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+.row [class^=col-] {
+  float: left;
+}
+.row [class^=col-]:not(:last-child) {
+  margin-right: 6rem;
+}
+.row .col-1-of-2 {
+  width: calc((100% - 6rem) / 2);
+}
+.row .col-1-of-3 {
+  width: calc((100% - 2 *6rem) / 3);
+}
+.row .col-2-of-3 {
+  width: calc((2 * (100% - 2 *6rem) / 3) + 6rem);
+}
+.row .col-1-of-4 {
+  width: calc((100% - 3 *6rem) / 4);
+}
+.row .col-2-of-4 {
+  width: calc(2 * ((100% - 3 *6rem) / 4) + 6rem);
+}
+.row .col-3-of-4 {
+  width: calc(3 * (100% - 3 *6rem) / 4 + (2 * 6rem));
+}
+
+.section-about {
+  background-color: #f7f7f7;
+  padding: 25rem 0;
+  margin-top: -20vh;
+}
+
+.img-composition {
+  width: 100%;
+  position: relative;
+}
+.img-composition .composition-photo {
+  position: absolute;
+  z-index: 1;
+  outline-offset: 2rem;
+  transition: all 0.2s;
+  box-shadow: 0 1.5rem 3rem rgba(119, 119, 119, 0.6);
+}
+.img-composition .composition-photo-1 {
+  top: -2rem;
+}
+.img-composition .composition-photo-2 {
+  top: 2rem;
+  left: 45%;
+}
+.img-composition .composition-photo-3 {
+  top: 10rem;
+  left: 20%;
+}
+.img-composition .composition-photo:hover {
+  z-index: 10;
+  outline: 1.5rem solid #55c57a;
+  transform: scale(1.1);
+  box-shadow: 0 2.5rem 4rem rgba(119, 119, 119, 0.6);
+}
+.img-composition:hover .composition-photo:not(:hover) {
+  transform: translateY(3px) scale(0.9);
+}
+
+.btn:link, .btn:visited {
   text-decoration: none;
   font-size: 1.8rem;
   text-transform: uppercase;
@@ -121,18 +229,23 @@ body {
   transition: all 0.2s;
   position: relative;
 }
-
 .btn:hover {
   transform: translateY(-0.3rem);
   box-shadow: 0rem 1rem 2rem rgba(0, 0, 0, 0.2);
   transition: all 0.4s;
 }
-
 .btn:active {
   transform: translateY(0px);
   box-shadow: 0rem 0.3rem 1rem rgba(0, 0, 0, 0.2);
 }
-
+.btn-white {
+  color: #777;
+  background-color: #fff;
+}
+.btn-animate {
+  animation: btnMoveFromBottom 0.5s ease-out 0.8s;
+  animation-fill-mode: backwards;
+}
 .btn::after {
   content: "";
   display: inline-block;
@@ -145,30 +258,12 @@ body {
   z-index: -1;
   transition: all 0.4s;
 }
-
 .btn-white::after {
   background-color: #fff;
 }
-
 .btn:hover::after {
   transform: scaleX(1.3) scaleY(1.5);
   opacity: 0;
-}
-
-.btn-animate {
-  animation: btnMoveFromBottom 0.5s ease-out 0.8s;
-  animation-fill-mode: backwards;
-}
-
-@keyframes btnMoveFromBottom {
-  0% {
-    opacity: 0;
-    transform: translateY(6rem);
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0rem);
-  }
 }
 
 /*# sourceMappingURL=style.css.map */
