added tour section

--- a/sass/abstracts/_variable.scss
+++ b/sass/abstracts/_variable.scss
@@ -7,4 +7,10 @@ $gray-light: #f7f7f7;
 $grid-gutter: 6rem;
 $grid-row-margin-bottom: 8rem;
 $grid-width: 114rem;
+$background-color-gray: #eee;
 
+$secondary-color-light: #ffb900;
+$secondary-color-dark: #ff7730;
+
+$tertiary-color-light: #2998ff;
+$tertiary-color-dark: #5643fa;
