--- a/sass/style.scss
+++ b/sass/style.scss
@@ -21,5 +21,8 @@ Dark green: #28b485
 @import 'layout/header';
 @import 'layout/grid';
 @import 'layout/main';
+
 //components
 @import 'components/button';
+@import 'components/feature-box';
+@import 'components/card';
