--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,36 @@ body {
   text-transform: uppercase;
 }
 
+.heading-card {
+  position: absolute;
+  top: 12rem;
+  right: 2rem;
+  text-transform: uppercase;
+  font-size: 3rem;
+  font-weight: 300;
+  width: 75%;
+  text-align: right;
+  color: #fff;
+}
+.heading-card-1 {
+  padding: 1rem 1.5rem;
+  -webkit-box-decoration-break: clone;
+  box-decoration-break: clone;
+  background-image: linear-gradient(to right bottom, rgba(255, 185, 0, 0.8), rgba(255, 119, 48, 0.8));
+}
+.heading-card-2 {
+  padding: 1rem 1.5rem;
+  -webkit-box-decoration-break: clone;
+  box-decoration-break: clone;
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8));
+}
+.heading-card-3 {
+  padding: 1rem 1.5rem;
+  -webkit-box-decoration-break: clone;
+  box-decoration-break: clone;
+  background-image: linear-gradient(to right bottom, rgba(41, 152, 255, 0.8), rgba(86, 67, 250, 0.8));
+}
+
 .u-text-center {
   text-align: center;
 }
@@ -187,6 +217,23 @@ body {
   margin-top: -20vh;
 }
 
+.section-feature {
+  padding: 20rem 0;
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../img/nat-4.jpg");
+  background-size: cover;
+  transform: skewY(-7deg);
+  margin-top: -7.5rem;
+}
+.section-feature > * {
+  transform: skewY(7deg);
+}
+
+.section-tour {
+  padding: 25rem 0rem 10rem 0rem;
+  background-color: #eee;
+  margin-top: -7.5rem;
+}
+
 .img-composition {
   width: 100%;
   position: relative;
@@ -242,6 +289,10 @@ body {
   color: #777;
   background-color: #fff;
 }
+.btn-green {
+  color: #fff;
+  background-color: #55c57a;
+}
 .btn-animate {
   animation: btnMoveFromBottom 0.5s ease-out 0.8s;
   animation-fill-mode: backwards;
@@ -261,9 +312,139 @@ body {
 .btn-white::after {
   background-color: #fff;
 }
+.btn-green::after {
+  background-color: #55c57a;
+}
 .btn:hover::after {
   transform: scaleX(1.3) scaleY(1.5);
   opacity: 0;
+}
+
+.btn2 {
+  color: #7ed56f;
+  text-decoration: none;
+  padding: 0.3rem 0;
+  border-bottom: 2px solid #55c57a;
+  transition: all 0.3s;
+}
+.btn2:hover {
+  transform: translateY(-0.3rem);
+  background-color: #55c57a;
+  color: #fff;
+  box-shadow: 0 0.5rem 0.5rem #777;
+}
+
+.feature-box {
+  background-color: rgba(255, 255, 255, 0.7);
+  padding: 4rem 2rem;
+  transition: transform 0.3s;
+  border-radius: 0.5rem;
+}
+.feature-box-icon {
+  font-size: 7rem;
+  background: linear-gradient(to right, #7ed56f, #28b485);
+  display: inline-block;
+  letter-spacing: 0.2rem;
+  -webkit-background-clip: text;
+  color: transparent;
+}
+.feature-box:hover {
+  transform: translateY(-1.5rem) scale(1.02);
+}
+
+.card {
+  perspective: 200rem;
+  height: 55rem;
+  width: 100%;
+  position: relative;
+  border-radius: 0.5rem;
+}
+.card-side {
+  height: 55rem;
+  transition: all 0.8s;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  backface-visibility: hidden;
+}
+.card-front-img {
+  height: 25rem;
+  background-position: center;
+  background-size: cover;
+  clip-path: polygon(0 1%, 100% 0, 100% 85%, 0% 100%);
+  background-blend-mode: screen;
+}
+.card-front-img-1 {
+  background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url("../../img/nat-5.jpg");
+}
+.card-front-img-2 {
+  background-image: linear-gradient(to right bottom, #7ed56f, #28b485), url("../../img/nat-6.jpg");
+}
+.card-front-img-3 {
+  background-image: linear-gradient(to right bottom, #2998ff, #5643fa), url("../../img/nat-7.jpg");
+}
+.card-front {
+  background-color: #fff;
+}
+.card-back {
+  transform: rotateY(-180deg);
+  text-align: center;
+  position: relative;
+}
+.card-back .cta {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.card-back .cta .card-price {
+  margin-bottom: 5rem;
+}
+.card-back .cta .card-price-only {
+  font-size: 1.5rem;
+  color: #fff;
+  font-weight: 300;
+  display: block;
+  text-transform: uppercase;
+}
+.card-back .cta .card-price-value {
+  font-weight: 100;
+  font-size: 5rem;
+  color: #fff;
+  display: block;
+  text-transform: uppercase;
+}
+.card-back .cta .book-now .btn {
+  font-size: 1.3rem;
+}
+.card-back-1 {
+  background-image: linear-gradient(to right bottom, #ffb900, #ff7730);
+}
+.card-back-2 {
+  background-image: linear-gradient(to right bottom, #7ed56f, #28b485);
+}
+.card-back-3 {
+  background-image: linear-gradient(to right bottom, #2998ff, #5643fa);
+}
+.card:hover .card-front {
+  transform: rotateY(180deg);
+}
+.card:hover .card-back {
+  transform: rotateY(0deg);
+}
+.card-details ul {
+  padding: 4rem;
+  list-style-type: none;
+}
+.card-details ul li {
+  font-weight: 400;
+  text-decoration: none;
+  text-align: center;
+  padding: 1rem 0;
+}
+.card-details ul li:not(:last-child) {
+  border-bottom: 1px solid #eee;
 }
 
 /*# sourceMappingURL=style.css.map */
