--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -23,6 +23,10 @@
 		color: $gray-color;
 		background-color: $white-color;
 	}
+	&-green {
+		color: $white-color;
+		background-color: $primary-color;
+	}
 	&-animate {
 		animation: btnMoveFromBottom 0.5s ease-out 0.8s;
 		animation-fill-mode: backwards;
@@ -42,8 +46,25 @@
 	&-white::after {
 		background-color: $white-color;
 	}
+	&-green::after {
+		background-color: $primary-color;
+	}
 	&:hover::after {
 		transform: scaleX(1.3) scaleY(1.5);
 		opacity: 0;
+	}
+}
+
+.btn2 {
+	color: $primary-light;
+	text-decoration: none;
+	padding: 0.3rem 0;
+	border-bottom: 2px solid $primary-color;
+	transition: all 0.3s;
+	&:hover {
+		transform: translateY(-0.3rem);
+		background-color: $primary-color;
+		color: $white-color;
+		box-shadow: 0 0.5rem 0.5rem $gray-color;
 	}
 }
