--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -24,6 +24,12 @@
 	margin-top: -7.5rem;
 }
 
+.section-stories {
+	padding: 15rem 20rem;
+
+	position: relative;
+}
+
 .img-composition {
 	width: 100%;
 	position: relative;
