--- a/sass/style.scss
+++ b/sass/style.scss
@@ -26,3 +26,5 @@ Dark green: #28b485
 @import 'components/button';
 @import 'components/feature-box';
 @import 'components/card';
+@import 'components/story';
+@import 'components/bg-video';
