--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+	&,
 	&:link,
 	&:visited {
 		text-decoration: none;
@@ -9,6 +10,7 @@
 		border-radius: 10rem;
 		transition: all 0.2s;
 		position: relative;
+		border: none;
 	}
 	&:hover {
 		transform: translateY(-0.3rem);
