--- a/sass/style.scss
+++ b/sass/style.scss
@@ -21,7 +21,7 @@ Dark green: #28b485
 @import 'layout/header';
 @import 'layout/grid';
 @import 'layout/main';
-
+@import 'layout/footer';
 //components
 @import 'components/button';
 @import 'components/feature-box';
