--- a/css/style.css
+++ b/css/style.css
@@ -248,6 +248,11 @@ body {
   background-image: linear-gradient(to right bottom, #7ed56f, #28b485);
 }
 
+.footer {
+  padding: 10rem 0;
+  background-color: #333;
+}
+
 .img-composition {
   width: 100%;
   position: relative;
@@ -278,6 +283,51 @@ body {
 }
 .img-composition:hover .composition-photo:not(:hover) {
   transform: translateY(3px) scale(0.9);
+}
+
+.footer-logo {
+  text-align: center;
+}
+.footer-logo img {
+  width: 15rem;
+}
+.footer-nav {
+  border-top: 2px solid #777;
+  padding-top: 2rem;
+  display: inline-block;
+}
+.footer-nav ul {
+  list-style-type: none;
+}
+.footer-nav ul li {
+  display: inline-block;
+  transition: all 0.3s;
+  backface-visibility: hidden;
+}
+.footer-nav ul li:not(:last-child) {
+  margin-right: 1.5rem;
+}
+.footer-nav ul li:hover {
+  transform: skewY(7deg) scale(1.3);
+  box-shadow: 0rem 0.5rem 0.5rem rgba(0, 0, 0, 0.7);
+  background-color: transparent;
+  color: #28b485;
+}
+.footer-nav ul li:hover a {
+  color: #28b485;
+}
+.footer-nav ul li a {
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #fff;
+  font-size: 1.4rem;
+}
+.footer .copy-right {
+  float: right;
+  width: 80%;
+  border-top: 2px solid #777;
+  padding-top: 2rem;
+  color: white;
 }
 
 .btn, .btn:link, .btn:visited {
