--- a/sass/abstracts/_variable.scss
+++ b/sass/abstracts/_variable.scss
@@ -1,13 +1,17 @@
 $primary-color: #55c57a;
 $primary-light: #7ed56f;
 $primary-dark: #28b485;
+
 $white-color: #fff;
 $gray-color: #777;
 $gray-light: #f7f7f7;
+
 $grid-gutter: 6rem;
 $grid-row-margin-bottom: 8rem;
 $grid-width: 114rem;
+
 $background-color-gray: #eee;
+$background-color-dark: #333;
 
 $secondary-color-light: #ffb900;
 $secondary-color-dark: #ff7730;
