--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -38,6 +38,11 @@
 	);
 }
 
+.footer {
+	padding: 10rem 0;
+	background-color: $background-color-dark;
+}
+
 .img-composition {
 	width: 100%;
 	position: relative;
