--- a/sass/style.scss
+++ b/sass/style.scss
@@ -22,6 +22,7 @@ Dark green: #28b485
 @import 'layout/grid';
 @import 'layout/main';
 @import 'layout/footer';
+@import 'layout/navbar';
 //components
 @import 'components/button';
 @import 'components/feature-box';
