--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,8 @@ body {
   font-weight: 400;
   line-height: 1.7;
   box-sizing: border-box;
+  position: relative;
+  overflow-x: hidden;
 }
 
 .heading_primary {
@@ -328,6 +330,100 @@ body {
   border-top: 2px solid #777;
   padding-top: 2rem;
   color: white;
+}
+
+.navbar-back {
+  width: 5rem;
+  height: 5rem;
+  position: fixed;
+  top: 6rem;
+  right: 6rem;
+  background-image: radial-gradient(#7ed56f, #55c57a, #28b485);
+  border-radius: 50%;
+  transition: all 0.7s;
+  z-index: 200;
+}
+.navbar-top {
+  position: fixed;
+  width: 6rem;
+  height: 6rem;
+  background-color: #fff;
+  border-radius: 50%;
+  top: 5.5rem;
+  right: 5.5rem;
+  z-index: inherit;
+  cursor: pointer;
+  z-index: 300;
+}
+.navbar-top label {
+  padding: 0rem 1.7rem 3rem 0.5rem;
+  border-radius: 50%;
+  color: transparent;
+}
+.navbar-top-line-top, .navbar-top-line-medium, .navbar-top-line-bottom {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 3rem;
+  height: 2px;
+  background-color: #333;
+  z-index: -1;
+  transition: margin-top 0.15s;
+}
+.navbar-top-line-top {
+  margin-top: -0.85rem;
+}
+.navbar-top-line-bottom {
+  margin-top: 0.75rem;
+}
+.navbar-top:hover .navbar-top-line-top {
+  margin-top: -1.1rem;
+}
+.navbar-top:hover .navbar-top-line-bottom {
+  margin-top: 1.1rem;
+}
+.navbar .checkbox {
+  display: none;
+}
+.navbar .checkbox:checked + .navbar-back {
+  transform: scale(60);
+}
+.navbar .checkbox:checked ~ .navbars {
+  left: 0%;
+  opacity: 1;
+}
+.navbar .navbars {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: -100%;
+  background-color: transparent;
+  opacity: 1;
+  transition: all 0.6s cubic-bezier(0.34, 1.56, 0.64, 1);
+  z-index: 250;
+}
+.navbar .navbars ul {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.navbar .navbars ul li {
+  text-align: center;
+  list-style-type: none;
+  margin: 2rem;
+}
+.navbar .navbars ul li a {
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 300;
+  font-size: 3.5rem;
+  color: #fff;
+}
+.navbar .navbars ul li a span {
+  margin-right: 1.5rem;
 }
 
 .btn, .btn:link, .btn:visited {
