--- a/sass/style.scss
+++ b/sass/style.scss
@@ -23,6 +23,7 @@ Dark green: #28b485
 @import 'layout/main';
 @import 'layout/footer';
 @import 'layout/navbar';
+@import 'layout/popup';
 //components
 @import 'components/button';
 @import 'components/feature-box';
