--- a/css/style.css
+++ b/css/style.css
@@ -359,6 +359,7 @@ body {
   padding: 0rem 1.7rem 3rem 0.5rem;
   border-radius: 50%;
   color: transparent;
+  user-select: none;
 }
 .navbar-top-line-top, .navbar-top-line-medium, .navbar-top-line-bottom {
   position: absolute;
@@ -436,6 +437,66 @@ body {
 }
 .navbar .navbars ul li a span {
   margin-right: 1.5rem;
+}
+
+.popup {
+  z-index: 999999;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(119, 119, 119, 0.9);
+  width: 100%;
+  height: 100vh;
+  opacity: 0;
+  transition: all 0.5s;
+  visibility: hidden;
+}
+.popup:target {
+  opacity: 1;
+  visibility: visible;
+}
+.popup:target .popup-main {
+  transform: translate(-50%, -50%) scale(1);
+  opacity: 1;
+}
+.popup .close-btn {
+  position: absolute;
+  top: 2rem;
+  right: 3rem;
+  font-size: 2rem;
+  cursor: pointer;
+}
+.popup .close-btn:hover {
+  color: #28b485;
+}
+.popup-main {
+  width: 75%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0.25);
+  background-color: #fff;
+  display: table;
+  opacity: 0;
+  transition: all 0.5s;
+}
+.popup-main-imgs {
+  display: table-cell;
+}
+.popup-main-imgs img {
+  width: 30rem;
+  display: block;
+}
+.popup-main .terms {
+  display: table-cell;
+  vertical-align: middle;
+  padding: 0 3rem;
+}
+.popup-main .terms-para {
+  column-count: 2;
+  column-gap: 2rem;
+  hyphens: auto;
+  -moz-hyphens: auto;
 }
 
 .btn, .btn:link, .btn:visited {
