--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -14,6 +14,9 @@
 		transform: translateX(-3rem) skewX(12deg);
 		position: relative;
 		overflow: hidden;
+		@include mediaQuery (phone){
+			transform: translateX(-3rem) skewX(0deg);
+		}
 
 		&-img {
 			height: 100%;
@@ -46,5 +49,11 @@
 	}
 	&-text {
 		transform: skewX(12deg);
+		@include mediaQuery(phone) {
+			transform: skewX(0deg);
+		}
+	}
+	@include mediaQuery(phone) {
+		transform: skewX(0deg);
 	}
 }
