--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -7,78 +7,103 @@
 		url('../../img/nat-10.jpg');
 	background-size: cover;
 	height: 50rem;
-}
+	@include mediaQuery(tablet-port) {
+		background-image: linear-gradient(
+				105deg,
+				rgba($white-color, 0.8) 60%,
+				rgba(0, 0, 0, 0) 60%
+			),
+			url('../../img/nat-10.jpg');
+	}
+	@include mediaQuery(tablet-port) {
+		background-image: linear-gradient(
+				105deg,
+				rgba($white-color, 0.8) 100%,
+				rgba(0, 0, 0, 0) 100%
+			),
+			url('../../img/nat-10.jpg');
+	}
 
-.form {
-	width: 50%;
-	padding: 5rem;
-	&-group {
-		margin-bottom: 2rem;
-		&::after {
-			content: '';
-			clear: both;
-			display: table;
-		}
-	}
-	&-input {
-		width: 85%;
-		padding: 1.5rem;
-		background-color: rgba($white-color, 0.8);
-		border: none;
-		font-family: inherit;
-		color: $gray-color;
-		border-bottom: 2px solid transparent;
-		transition: border 0.3s;
-		&:focus {
-			outline: none;
-		}
-		&:focus:invalid {
-			border-bottom: 2px solid red;
-		}
-		&:focus:valid {
-			border-bottom: 2px solid $primary-dark;
-		}
-	}
-	&-input:placeholder-shown + &-label {
-		padding-top: -4rem;
-		opacity: 0;
-	}
-	&-label {
-		display: block;
-		font-size: 1.3rem;
-		margin-left: 2rem;
-		transition: all 0.4s;
-		opacity: 1;
-	}
-	.radio-group {
+	.form {
 		width: 50%;
-		float: left;
-	}
-	.radio {
-		display: none;
-		&-btn {
-			width: 2rem;
-			height: 2rem;
-			border: 2px solid $primary-dark;
-			border-radius: 50%;
-			display: inline-block;
-			position: relative;
-			margin-bottom: -0.5rem;
+		padding: 5rem;
+		@include mediaQuery(tablet-port) {
+			width: 60%;
+		}
+		@include mediaQuery(tablet-port) {
+			width: 100%;
+		}
+		&-group {
+			margin-bottom: 2rem;
 			&::after {
 				content: '';
-				position: absolute;
-				top: 50%;
-				left: 50%;
-				transform: translate(-50%, -50%);
-				width: 1rem;
-				height: 1rem;
-				border-radius: 50%;
-				background-color: $primary-color;
-				opacity: 0;
+				clear: both;
+				display: table;
 			}
 		}
-		&:checked + .radio-label .radio-btn::after {
+		&-input {
+			width: 85%;
+			padding: 1.5rem;
+			background-color: rgba($white-color, 0.8);
+			border: none;
+			font-family: inherit;
+			color: $gray-color;
+			border-bottom: 2px solid transparent;
+			transition: border 0.3s;
+			@include mediaQuery(tablet-port) {
+				width: 85%;
+			}
+			&:focus {
+				outline: none;
+			}
+			&:focus:invalid {
+				border-bottom: 2px solid red;
+			}
+			&:focus:valid {
+				border-bottom: 2px solid $primary-dark;
+			}
+		}
+		&-input:placeholder-shown + &-label {
+			padding-top: -4rem;
+			opacity: 0;
+		}
+		&-label {
+			display: block;
+			font-size: 1.3rem;
+			margin-left: 2rem;
+			transition: all 0.4s;
 			opacity: 1;
+		}
+		.radio-group {
+			width: 50%;
+			float: left;
+		}
+		.radio {
+			display: none;
+			&-btn {
+				width: 2rem;
+				height: 2rem;
+				border: 2px solid $primary-dark;
+				border-radius: 50%;
+				display: inline-block;
+				position: relative;
+				margin-bottom: -0.5rem;
+				&::after {
+					content: '';
+					position: absolute;
+					top: 50%;
+					left: 50%;
+					transform: translate(-50%, -50%);
+					width: 1rem;
+					height: 1rem;
+					border-radius: 50%;
+					background-color: $primary-color;
+					opacity: 0;
+				}
+			}
+			&:checked + .radio-label .radio-btn::after {
+				opacity: 1;
+			}
 		}
 	}
 }
