--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -1,9 +1,19 @@
 .row {
 	max-width: $grid-width;
 	margin: 0 auto;
+	@include mediaQuery(tablet-land) {
+		padding: 0 1rem;
+	}
+	@include mediaQuery(tablet-port) {
+		max-width: 50rem;
+		padding: 0 2rem;
+	}
 
 	&:not(:last-child) {
 		margin-bottom: $grid-row-margin-bottom;
+		@include mediaQuery(tablet-port) {
+			margin-bottom: 0rem;
+		}
 	}
 	&::after {
 		content: '';
@@ -14,6 +24,11 @@
 		float: left;
 		&:not(:last-child) {
 			margin-right: $grid-gutter;
+		}
+		@include mediaQuery(tablet-port) {
+			width: 100% !important;
+			margin-right: 0;
+			margin-bottom: 5rem;
 		}
 	}
 
