--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -2,10 +2,16 @@
 	background-color: $gray-light;
 	padding: 25rem 0;
 	margin-top: -20vh;
+	@include mediaQuery(tablet-port) {
+		padding: 20rem 0;
+	}
 }
 
 .section-feature {
 	padding: 20rem 0;
+	@include mediaQuery(tablet-port) {
+		padding: 15rem 0;
+	}
 	background-image: linear-gradient(
 			to right bottom,
 			rgba($primary-light, 0.8),
@@ -21,13 +27,18 @@
 }
 .section-tour {
 	padding: 25rem 0rem 10rem 0rem;
+	@include mediaQuery(tablet-port) {
+		padding: 20rem 0rem 5rem 0rem;
+	}
 	background-color: $background-color-gray;
 	margin-top: -7.5rem;
 }
 
 .section-stories {
 	padding: 15rem 20rem;
-
+	@include mediaQuery(tablet-port) {
+		padding: 8rem;
+	}
 	position: relative;
 }
 .section-book {
@@ -37,16 +48,27 @@
 		$primary-light,
 		$primary-dark
 	);
+	@include mediaQuery(tablet-port) {
+		padding: 10rem 0rem;
+		.row {
+			max-width: 100rem !important;
+		}
+	}
 }
 
 .footer {
 	padding: 10rem 0;
+	@include mediaQuery(tablet-port) {
+		padding: 5rem;
+	}
 	background-color: $background-color-dark;
 }
 
 .img-composition {
 	width: 100%;
 	position: relative;
+	height: 30rem;
+	padding-top: 4rem;
 	.composition-photo {
 		position: absolute;
 		z-index: 1;
@@ -56,6 +78,10 @@
 
 		&-1 {
 			top: -2rem;
+			@include mediaQuery(tablet-port) {
+				top: 3rem;
+				left: -10rem;
+			}
 		}
 		&-2 {
 			top: 2rem;
@@ -64,6 +90,9 @@
 		&-3 {
 			top: 10rem;
 			left: 20%;
+			@include mediaQuery(phone) {
+				left: 15%;
+			}
 		}
 		&:hover {
 			z-index: 10;
@@ -71,8 +100,35 @@
 			transform: scale(1.1);
 			box-shadow: 0 2.5rem 4rem rgba($gray-color, 0.6);
 		}
+		@include mediaQuery(tablet-land) {
+			transform: scale(0.7);
+
+			&:hover {
+				z-index: 10;
+				outline: 1.5rem solid $primary-color;
+				transform: scale(0.9);
+				box-shadow: 0 2.5rem 4rem rgba($gray-color, 0.6);
+			}
+		}
+		@include mediaQuery(tablet-port) {
+			transform: scale(0.5);
+
+			&:hover {
+				z-index: 10;
+				outline: 1.5rem solid $primary-color;
+				transform: scale(0.75);
+				box-shadow: 0 2.5rem 4rem rgba($gray-color, 0.6);
+			}
+		}
 	}
+
 	&:hover .composition-photo:not(:hover) {
 		transform: translateY(3px) scale(0.9);
+	}
+	@include mediaQuery(tablet-land) {
+		&:hover .composition-photo:not(:hover) {
+			transform: translateY(3px) scale(0.6);
+			// display: none;
+		}
 	}
 }
