--- a/sass/layout/_navbar.scss
+++ b/sass/layout/_navbar.scss
@@ -1,25 +1,3 @@
-// .nav-bars {
-//     position: absolute;
-//     top: 50%;
-//     left: 50%;
-//     transform: translate(-50%, -50%);
-//     li {
-//         text-align: center;
-//         list-style-type: none;
-//         margin: 2rem;
-//         a {
-//             text-decoration: none;
-//             text-transform: uppercase;
-//             font-weight: 300;
-//             font-size: 3.5rem;
-//             color: $white-color;
-//             span {
-//                 margin-right: 1.5rem;
-//             }
-//         }
-//     }
-// }
-
 .navbar {
 	// position: fixed;
 	// top: 0;
@@ -148,6 +126,12 @@
 					color: $white-color;
 					span {
 						margin-right: 1.5rem;
+					}
+					@include mediaQuery(phone) {
+						font-size: 2.3rem;
+						span {
+							margin-right: 1rem;
+						}
 					}
 				}
 			}
