--- a/css/style.css
+++ b/css/style.css
@@ -1022,18 +1022,18 @@ body {
 }
 
 .book {
-  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.8) 50%, rgba(0, 0, 0, 0) 50%), url(../../img/nat-10.jpg);
+  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.8) 50%, rgba(0, 0, 0, 0) 50%), url(https://images.unsplash.com/photo-1527489377706-5bf97e608852?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=959&q=80);
   background-size: cover;
   height: 50rem;
 }
 @media only screen and (max-width: 56.25em) {
   .book {
-    background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.8) 60%, rgba(0, 0, 0, 0) 60%), url(../../img/nat-10.jpg);
+    background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.8) 60%, rgba(0, 0, 0, 0) 60%), url(https://images.unsplash.com/photo-1527489377706-5bf97e608852?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=959&q=80);
   }
 }
 @media only screen and (max-width: 56.25em) {
   .book {
-    background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.8) 100%, rgba(0, 0, 0, 0) 100%), url(../../img/nat-10.jpg);
+    background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.8) 100%, rgba(0, 0, 0, 0) 100%), url(https://images.unsplash.com/photo-1527489377706-5bf97e608852?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=959&q=80);
   }
 }
 .book .form {
